# siren-audio

./: .gitignore  README.md  pyproject.toml
configs/: asvspoof2019_dev.yaml  default.yaml  fakeavceleb_eval.yaml  librispeech_baseline.yaml  low_vram_gtx1650.yaml  realtime_guard.yaml
data/: README.md
data/manifests/: librispeech_devclean_sample.csv
paper/: siren_paper.tex
results/ablation/: README.md  siren_wave_ablation.csv
results/attack_benchmarks/: README.md  attack_success_rates.csv  module_matrix.md
results/detection_benchmarks/: README.md  benchmark_presets.md  corpus_summary_example.json  detection_auc.csv
results/detection_benchmarks/librispeech_devclean_1272/: corpus_predictions.csv  corpus_summary.csv  corpus_summary.json
results/detection_benchmarks/librispeech_devclean_sample/: corpus_predictions.csv  corpus_summary.csv  corpus_summary.json
results/research_bundle/: README.md  research_bundle.json
results/research_bundle/paper_tables/: ablation.tex  (+1 more)
scripts/: benchmark_public_datasets.sh  setup_public_datasets.sh
src/siren/: __init__.py  ablation.py  audio.py  baselines.py  cli.py  config.py  corpus.py  datasets.py  evaluation.py  experiments.py  features.py  generator.py  latency.py  modules.py  orchestration.py  paper_tables.py  presets.py  reporting.py  runtime.py  streaming.py  training.py
tests/: test_ablation_and_tables.py  test_attacks.py  test_corpus.py  test_dataset_autodetect.py  test_datasets_protocols.py  test_forensics.py  test_generator_and_cli_surface.py  test_reporting_and_latency.py  test_runtime_and_experiments.py
(+18 files in other folders)
