[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siren-audio"
version = "0.1.0"
description = "SIREN: Stealth Injection and Recognition of Encoded Neural-adversarial audio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SIREN Contributors" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10.2.post1",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
siren = "siren.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
